src/main/kotlin/com/example/gymi/global/error/exception/ErrorCode.kt
package com.example.gymi.global.error.exception

enum class ErrorCode(

        val status: Int,
        val message: String
) {
}